<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="50dp"
        android:gravity="center">

        <!--TXT MI PUNTUACION-->
        <TextView
            android:id="@+id/txtMyPoints"
            android:text="@string/txtMyPoints"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--TIEMPO PUNTUACION-->
        <TextView
            android:id="@+id/time"
            android:text="@string/time"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--IMAGEN-->
        <ImageView
            android:id="@+id/image"
            android:src="@drawable/bee"
            android:layout_marginTop="10dp"
            android:layout_width="150dp"
            android:layout_height="150dp"/>

        <!--UID-->
        <TextView
            android:id="@+id/uid"
            android:text="@string/uid"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--CORREO-->
        <TextView
            android:id="@+id/email"
            android:text="@string/email"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--NOMBRE DE USUARIO-->
        <TextView
            android:id="@+id/name"
            android:text="@string/name"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--FECHA DE REGISTRO-->
        <TextView
            android:id="@+id/registration_date"
            android:text="@string/name"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--TXT MENU-->
        <TextView
            android:id="@+id/txtMenu"
            android:text="@string/txtMenu"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--BTN JUGAR-->
        <Button
            android:id="@+id/btnPlay"
            android:text="@string/btnPlay"
            android:layout_marginTop="10dp"
            android:background="@drawable/personalized_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <!--BTN ACERCA DE-->
        <Button
            android:id="@+id/btnAboutApp"
            android:text="@string/btnAboutApp"
            android:layout_marginTop="10dp"
            android:background="@drawable/personalized_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <!--BTN CERRAR SESIÓN-->
        <Button
            android:id="@+id/btnLogout"
            android:text="@string/btnLogout"
            android:layout_marginTop="10dp"
            android:background="@drawable/personalized_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>